RESOLVED FIXED214452
[WebGL] Safari snapshots of WebGL content in the tab picker don't work
https://bugs.webkit.org/show_bug.cgi?id=214452
Summary [WebGL] Safari snapshots of WebGL content in the tab picker don't work
Justin Fan
Reported 2020-07-17 05:06:58 PDT
Support displaying WebGL canvases in Safari tab preview and tab overview features.
Attachments
Patch (4.91 KB, patch)
2020-07-22 20:03 PDT, Justin Fan
darin: review+
Justin Fan
Comment 1 2020-07-17 05:07:25 PDT
Justin Fan
Comment 2 2020-07-22 20:03:20 PDT
Justin Fan
Comment 3 2020-07-22 20:04:49 PDT
Sort of WIP patch for now. The snapshot will use the last-painted Image by the canvas if the Page is no longer active when the snapshot is requested. May still try to write an internal test for the snapshotting feature.
Justin Fan
Comment 4 2020-07-22 20:05:12 PDT
To clarify, the code works, but there's no test.
Darin Adler
Comment 5 2020-07-23 09:12:32 PDT
Comment on attachment 405013 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=405013&action=review > Source/WebCore/ChangeLog:9 > + No new tests; writing a test may involve adding a new feature to TestRunner to trigger this path. Understood. Could we please add that feature?
Tim Horton
Comment 6 2020-07-23 11:13:13 PDT
(Probably we should just write an API test similar to the other snapshotting tests)
Justin Fan
Comment 7 2020-07-23 11:39:59 PDT
Should have checked this earlier, but iOS just works. This only occurred on mac.
Dean Jackson
Comment 8 2020-07-23 15:02:09 PDT
Comment on attachment 405013 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=405013&action=review >> Source/WebCore/ChangeLog:9 >> + No new tests; writing a test may involve adding a new feature to TestRunner to trigger this path. > > Understood. Could we please add that feature? We definitely should. Either an API test or something in Internals. Internals could expose the same thing that the Web Inspector uses with "PageAgent.snapshotNode", which ultimately is WebCore::snapshotNode, and either return the ImageBuffer as an HTMLImageElement, an ArrayBuffer (for drawing into a canvas) or even a DOMString via toDataURL("image/png"_s, WTF::nullopt, PreserveResolution::Yes) on the result.
Dean Jackson
Comment 9 2020-07-23 15:03:09 PDT
I slightly prefer using Internals because then it can be a reftest in LayoutTests, which I think people run more frequently than API tests.
Dean Jackson
Comment 10 2020-07-30 16:23:15 PDT
Dean Jackson
Comment 11 2020-07-30 16:26:53 PDT
I added an API test (although mac only at the moment).
Note You need to log in before you can comment on or make changes to this bug.