[WebGL] Safari snapshots of WebGL content in the tab picker don't work https://bugs.webkit.org/show_bug.cgi?id=214452 <rdar://problem/21243082>

Source/WebCore:

Original patch by Justin Fan. Reviewed by Darin Adler.

Test is in TestWebKitAPI/Tests/WebKitCocoa/WKWebViewSnapshot.mm.

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::paint): Will properly request a paint when a snapshot is requested.
* html/HTMLCanvasElement.h:
* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::paintRenderingResultsToCanvas): Only clear the last snapshot if readPixels will succeed.
* rendering/RenderHTMLCanvas.cpp:
(WebCore::RenderHTMLCanvas::paintReplaced):

Tools:

Test for snapshotting. Marked as PLATFORM(MAC) for now.

* TestWebKitAPI/Tests/WebKitCocoa/WKWebViewSnapshot.mm:
(TEST):

Canonical link: https://commits.webkit.org/227803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265116 268f45cc-cd09-0410-ab3c-d52691b4dbfc